fixed spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -72,6 +72,7 @@ body {
   flex: 2;
   margin-left: 10%;
   margin-right: 5%;
+  padding-top: 5%;
 
   .pic {
     height: 10em;
